objects/UserStory__c.object
<CustomObject>
    <fields>
        <fullName>For__c</fullName>
        <inlineHelpText>Select a high-level function</inlineHelpText>
        <label>For</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_want__c</fullName>
        <inlineHelpText>What are you doing?</inlineHelpText>
        <label>I want</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>So_that__c</fullName>
        <inlineHelpText>Why are you doing it?</inlineHelpText>
        <label>So that</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserStory_Id__c</fullName>
        <displayFormat>US-{0000}</displayFormat>
        <label>UserStory Id</label>
        <type>AutoNumber</type>
    </fields>
    <label>UserStory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>For__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Short description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserStories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>